# norm

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: CodeStandards.md
src/core/: __init__.py
src/norm/: __init__.py
src/norm/core/: __init__.py
src/norm/core/typing/: query_builder.py  query_mapper.py  repository.py  vars.py
tests/: fixtures.py
tests/core/: __init__.py  test_env.py
